# bolt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Context/: stage_0_context_log.md  stage_1_context_log.md
Context/archive/: stage_0_context_log.md
Taskboard/: bolt_compiler_task_board_stage1.md  bolt_compiler_task_board_stub_pack_v_0_kickstart.md  stage_0_context_log.md
compiler/backend/: README.md  backend.md
compiler/common/: type.hpp
compiler/driver/: CMakeLists.txt  command_line.hpp  driver_main.cpp  import_bundle_writer.cpp  import_bundle_writer.hpp
compiler/front_end/: CMakeLists.txt  lexer.cpp  token.hpp
compiler/frontend/: README.md  ast.hpp  frontend.md  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
compiler/high_level_ir/: CMakeLists.txt  README.md  binder.cpp  binder.hpp  diagnostic.hpp  high_level_ir.md  import_resolver.cpp  import_resolver.hpp  module.hpp  module_locator.cpp  module_locator.hpp
compiler/hir/: CMakeLists.txt  module.cpp
compiler/language_server/: README.md  language_server.md
compiler/linker/: CMakeLists.txt  README.md  bolt_ld_main.cpp  cli_options.cpp  cli_options.hpp  linker.md  linker_invocation.cpp  linker_invocation.hpp
compiler/linker/scripts/: air.ld
compiler/logging/: README.md  logging.md
compiler/low_level_ir/: README.md  low_level_ir.md
compiler/middle_ir/: CMakeLists.txt  README.md  builder.cpp  builder.hpp  canonical.cpp  canonical.hpp  lowering.cpp  lowering.hpp  middle_ir.md  module.cpp  module.hpp  printer.cpp  printer.hpp  ssa_plan.md  verifier.cpp
compiler/middle_ir/passes/: CMakeLists.txt  control_flow_graph.cpp  control_flow_graph.hpp  dominance_frontier.cpp  dominance_frontier.hpp  dominator_tree.cpp  dominator_tree.hpp  live_enforcement.cpp  live_enforcement.hpp  live_enforcement_design.md  ssa_conversion.cpp  ssa_conversion.hpp  ssa_placement.cpp  ssa_placement.hpp
compiler/mir/: CMakeLists.txt  lowering.hpp  module.hpp  verifier.cpp  verifier.hpp
docs/: risk_watchlist.md  stage0_next_steps.md  testing_gates.md
docs/specs/: Bolt_Language_Glossary_v2_3.md  bolt_compiler_glossary_v_1.md  bolt_master_spec_v_3.md  bolt_specification_v_2.md
examples/: add.bolt  blueprint_sample.bolt
examples/golden/: blueprint_sample.mir
runtime/: CMakeLists.txt  runtime.c  runtime.h  runtime_start_entry.c  runtime_stub_plan.md
tests/: CMakeLists.txt  blueprint_sample.bolt  demo_sample.bolt
tests/golden/: RunMirGolden.cmake
tests/smoke/: RunBoltLdDryRun.cmake
tests/unit/driver/: CommandLineParserTest.cpp  ImportBundleWriterTest.cpp
tests/unit/frontend/: LexerTest.cpp  ParserTest.cpp
tests/unit/high_level_ir/: BinderTest.cpp  ImportResolverTest.cpp  ModuleLocatorTest.cpp
tests/unit/linker/: LinkerCommandLineTest.cpp  LinkerInvocationTest.cpp
tests/unit/middle_ir/: ControlFlowGraphTest.cpp  DominanceFrontierTest.cpp  DominatorTreeTest.cpp  LiveEnforcementTest.cpp  LoweringTest.cpp  MirCanonicalTest.cpp  SsaConversionTest.cpp  SsaPlacementTest.cpp  VerifierTest.cpp
tests/unit/runtime/: RuntimeHelpersTest.cpp
